--- a/package.json
+++ b/package.json
@@ -2,13 +2,6 @@
   "name": "mp-test",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "mobx": "^6.5.0",
-    "mobx-react-lite": "^3.3.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -33,9 +26,22 @@
       "last 1 safari version"
     ]
   },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "classnames": "^2.3.2",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.3.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-scripts": "5.0.1",
+    "uuid": "^9.0.0"
+  },
   "devDependencies": {
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "@types/uuid": "^9.0.2",
     "typescript": "^4.6.3"
   }
 }
